[gd_scene load_steps=4 format=3 uid="uid://d8q7r7sc4x0h"]

[ext_resource type="Script" path="res://assembled-assets/number_cell.gd" id="1_lox0j"]
[ext_resource type="Texture2D" uid="uid://dskoaufjuato2" path="res://assets/Paint Tiles Atlas Update 3.png" id="1_yme4v"]
[ext_resource type="Texture2D" uid="uid://b1a1tcqsdthr1" path="res://assets/Paint Text Tiles.png" id="3_b1okc"]

[node name="NumberCell" type="Node2D"]
script = ExtResource("1_lox0j")

[node name="DotSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_yme4v")
region_enabled = true
region_rect = Rect2(1920, 5248, 128, 128)

[node name="NumberSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_b1okc")
region_enabled = true
region_rect = Rect2(1408, 512, 128, 128)
